--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,2 @@
-RewriteEngine On
-RewriteCond %{HTTP_HOST} https://gusli.ga
-RewriteRule (.*) https://egusli.by/$1 [R=301,L]
+RewriteEngine on
+RewriteRule ^(.*)$ https://egusli.by/$1 [R=301,L]
